<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_margin="25dp"
        android:background="@drawable/logo"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:hint="@string/email"
        android:layout_margin="5dp"
        android:background="@drawable/et_border"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="5dp"
        android:layout_margin="5dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:padding="15dp"
        android:background="@drawable/et_border"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:background="@color/defaultColor"
        android:text="@string/login"/>


    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textSize="15sp"
        android:textAlignment="center"
        android:text="@string/create_account_text"/>

</LinearLayout>