<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/add_product"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/add_item_photo"
            android:background="@drawable/item_uknown"
            android:scaleType="centerCrop"
            android:layout_margin="5dp"
            android:layout_width="150dp"
            android:layout_height="150dp"/>
        <EditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:inputType="text"
            android:hint="@string/product_name"
            android:padding="10dp"
            android:layout_toEndOf="@+id/add_item_photo"
            android:background="@drawable/et_border"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/product_desc"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:inputType="text"
            android:hint="@string/description"
            android:padding="10dp"
            android:layout_toEndOf="@+id/add_item_photo"
            android:layout_below="@+id/product_name"
            android:background="@drawable/et_border"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_desc"
            android:layout_toRightOf="@+id/add_item_photo"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:inputType="numberDecimal"
                android:hint="@string/price"
                android:layout_weight="1"
                android:padding="10dp"
                android:background="@drawable/et_border"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/product_stock"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:inputType="number"
                android:hint="@string/stock"
                android:layout_weight="1"
                android:padding="10dp"
                android:background="@drawable/et_border"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/add_product_btn"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:background="@color/defaultColor"
        android:text="@string/add_product"/>
</LinearLayout>